# dmc-docs

./: .gitignore  LICENSE  README.md  app.py  callbacks.py  create_docs_folder.sh  data.py  date_formats.csv  home_layout.py  pyproject.toml  releasing.md  render.yaml  requirements.txt  run.py  server.py  utils.py
assets/: accordion.css  dash4.css  docs.css  hotkey.js  llm.txt  llms.json  llms.txt  m2d.css  radiocard.css  resuable_components.css  script.js  scripts.js  styles.css
assets/examples-ag-grid-js/: dmc_button.js  dmc_card.js  dmc_cell_editor.js
assets/examples-js/: barcolor.js  celcius_label.js  chart-tooltip.js  custom_copy.js  disabled_dates.js  format-datetime.js  format-number-intl.js  format-scatter-chart.js  format-usd.js  getdayprops.js  getprops.js  heatmapTooltip.js  option_filter.js  option_sort.js  renderDay.js  render_badge.js  render_option_multiselect.js  render_option_select.js  render_option_tagsinput.js  (+7 more)
components/: accordion.py  affix.py  alert.py  appshell.py  badge.py  button.py  checkbox.py  chips.py  configurator.py  datepicker.py  daterangepicker.py  divider.py  drawer.py  header.py  image.py  kwargs.py  modal.py  navbar.py  notifications.py  paper.py  prism.py  progress.py  radiogroup.py  segmentedcontrol.py  select.py  sidebar.py  slider.py  spoiler.py  switch.py  table.py  tabs.py  text.py  textinput.py  title.py  toc.py  tooltip.py
lib/: appshell.py  appshell_old.py  blocks.py  blueprints.py  configurator.py  constants.py  converter.py  directives.py  interactive.py  parser.py  print_styles_api_table.py  propdef.py  renderer.py  utils.py
llm/: add_title_from_metadata.py  generate_llm_text.py  generate_llms_text.py  llms_routing.py  replace_exec.py  replace_functions_as_props.py  replace_kwargs.py  replace_other_directives.py  replace_sourcetabs.py  replace_styles_api_text.py
pages/: autogenerate.py  home.py  markdown.py  not_found_404.py
render/: build.sh  run.sh
reusable_components/: __init__.py  component_block.py  component_reference.py  title.py
temp/: button.py  checkbox.py  chips.py  datepicker.py  daterangepicker.py  divider.py  drawer.py  image.py  modal.py
templates/: docs.html
(+1592 files in other folders)
