[tool.poetry]
name = "dmc-docs"
version = "0.1.0"
description = "Official documentation for Dash Mantine Components library. This documentation is entirely created using components from dash-mantine-components."
authors = ["Snehil Vijay <snehilvj@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^3.0.0rc3"
dash-iconify = "^0.1.0"
requests = "^2.27.1"
python-frontmatter = "^1.0.0"
dash-mantine-components = "1.0.0rc2"
markdown2dash = "0.1.2"
pydantic = "^2.3.0"
gunicorn = "^21.2.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
